projects/examples/source/02.04.01.cpp
///////////////////////////////////////////////////////////////////

// support : en.wikipedia.org/wiki/X86_calling_conventions

///////////////////////////////////////////////////////////////////

#include <tuple>
#include <type_traits>

///////////////////////////////////////////////////////////////////

[[nodiscard]] auto handle(int x);

///////////////////////////////////////////////////////////////////

[[nodiscard]] auto handle(int x) // support : compiler-explorer.com
{
	return x;
}

///////////////////////////////////////////////////////////////////

int main()
{
    static_assert(std::is_same_v < decltype(handle), int(int) > );

//  --------------------------------------------------------------

//	handle(1); // error

//  --------------------------------------------------------------

    [[maybe_unused]] auto x = handle(1);

//  --------------------------------------------------------------

    std::ignore = handle(1);
}

///////////////////////////////////////////////////////////////////